# OpenMORE

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OpenMORE.rosinstall  README.md  dockerfile_OpenMORE  dockerfile_open_more  replanning_strategies.rosinstall  update_submodules.sh
cells/replanners_bench_3d_complex_moveit_config/: .setup_assistant  CMakeLists.txt
cells/replanners_bench_3d_complex_moveit_config/config/: kinematics.yaml  replanners_bench_3d_complex.srdf
cells/replanners_bench_3d_complex_moveit_config/launch/: default_warehouse_db.launch  gazebo.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
cells/replanners_bench_3d_moveit_config/: CMakeLists.txt  package.xml
cells/replanners_bench_3d_moveit_config/config/: joint_limits.yaml  ompl_planning.yaml
cells/replanners_bench_3d_moveit_config/launch/: gazebo.launch  move_group.launch  moveit.rviz  planning_context.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  simple_moveit_controller_manager.launch.xml
cells/replanners_bench_3d_simple_moveit_config/: .setup_assistant
cells/replanners_bench_3d_simple_moveit_config/launch/: demo.launch  gazebo.launch  moveit.rviz  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
replanners_benchmark/: CMakeLists.txt  README.md  package.xml
replanners_benchmark/config/: how_to_configure_benchmark.yaml  replanners_bench_12d.yaml  replanners_bench_18d.yaml  replanners_bench_3d.yaml  replanners_bench_3d_complex.yaml  replanners_bench_3d_simple.yaml  replanners_bench_6d.yaml
replanners_benchmark/config/scene/: object_test_replanner.yaml  static_scene_replanners_bench_3d_complex.yaml  static_scene_replanners_bench_3d_simple.yaml
replanners_benchmark/launch/: how_to_launch_benchmark.launch  replanners_benchmark_12d.launch  replanners_benchmark_18d.launch  replanners_benchmark_3d.launch  replanners_benchmark_3d_complex.launch  replanners_benchmark_3d_simple.launch  replanners_benchmark_6d.launch
replanners_benchmark/launch/cell/: cell.launch  load_cell_12d.launch  load_cell_18d.launch  load_cell_3d.launch  load_cell_3d_complex.launch  load_cell_3d_simple.launch  load_cell_6d.launch
replanners_benchmark/matlab/: readBin.m
replanners_benchmark/src/: replanners_benchmark.cpp
replanners_cells/: README.md
replanners_cells/replanners_bench_3d_complex_moveit_config/: package.xml
replanners_cells/replanners_bench_3d_complex_moveit_config/config/: fake_controllers.yaml
replanners_cells/replanners_bench_3d_moveit_config/: .setup_assistant
replanners_cells/replanners_bench_3d_simple_moveit_config/: CMakeLists.txt  package.xml
replanners_cells/replanners_bench_cells/: CMakeLists.txt  package.xml
replanners_lib/: CMakeLists.txt  README.md  package.xml
replanners_lib/config/: 3dsafety.yaml  crash_test_replanner.yaml  crash_test_replanner_manager.yaml  crash_test_replanner_manager_6d.yaml  crash_test_replanner_manager_UAV.yaml  crash_test_replanner_manager_uav.yaml  object_test_replanner.yaml  static_scene_cartesian.yaml  static_scene_crash_test_UAV.yaml  test_replanner_cartesian.yaml  test_replanner_manager_cartesian.yaml
replanners_lib/config/scene/: object_test_replanner.yaml  static_scene_cartesian.yaml  static_scene_crash_test.yaml  static_scene_crash_test_UAV.yaml
replanners_lib/examples/: example_replanner.cpp  example_replanner_manager.cpp  test_replanner.cpp  test_replanner_manager.cpp
replanners_lib/examples/config/: complete_list_of_parameters_for_replanner_manager.yaml  example_replanner.yaml  example_replanner_manager.yaml  quick_example_3d.yaml  quick_example_6d.yaml
replanners_lib/examples/launch/: example_replanner.launch  example_replanner_manager.launch  quick_example_3d.launch  quick_example_6d.launch
replanners_lib/examples/src/: quick_example.cpp
replanners_lib/include/: DRRT.h  DRRTstar.h  anytimeDRRT.h  replanner_base.h  replanner_to_goal.h
replanners_lib/include/replanners_lib/: moveit_utils.h  trajectory.h
replanners_lib/include/replanners_lib/replanner_managers/: replanner_manager_AIPRO.h  replanner_manager_DRRT.h  replanner_manager_DRRTStar.h  replanner_manager_MARS.h  replanner_manager_MARSHA.h  replanner_manager_MPRRT.h  replanner_manager_anytimeDRRT.h  replanner_manager_base.h  replanner_manager_to_goal.h
replanners_lib/include/replanners_lib/replanners/: AIPRO.h  DRRT.h  DRRTStar.h  LI_DRRT.h  MARS.h  MARSHA.h  MPRRT.h  anytimeDRRT.h  replanner_base.h  replanner_to_goal.h
replanners_lib/launch/: cell.launch  crash_test_replanner.launch  crash_test_replanner_manager.launch  crash_test_replanner_manager_6d.launch  crash_test_replanner_manager_uav.launch  test_add_remove_node.launch  test_new_start.launch  test_replanner_cartesian.launch  test_replanner_manager_cartesian.launch
replanners_lib/launch/crash_test/: crash_test_replanner.launch  crash_test_replanner_manager.launch  crash_test_replanner_manager_UAV.launch  crash_test_replanner_manager_uav.launch
replanners_lib/src/: moveit_utils.cpp  trajectory.cpp
replanners_lib/src/replanner_managers/: replanner_manager_AIPRO.cpp  replanner_manager_DRRT.cpp  replanner_manager_DRRTStar.cpp  replanner_manager_MARS.cpp  replanner_manager_MARSHA.cpp  replanner_manager_MPRRT.cpp  replanner_manager_anytimeDRRT.cpp  replanner_manager_base.cpp  replanner_manager_to_goal.cpp
replanners_lib/src/replanners/: AIPRO.cpp  DRRT.cpp  DRRTStar.cpp  DRRTstar.cpp  LI_DRRT.cpp  MARS.cpp  MARSHA.cpp  MPRRT.cpp  anytimeDRRT.cpp  replanner_base.cpp  replanner_to_goal.cpp
replanners_lib/src/test/: crash_test_replanner.cpp  crash_test_replanner_manager.cpp  test_add_remove_node.cpp  test_new_start.cpp  test_replanner.cpp  test_replanner_manager.cpp
replanning_to_goal/: CMakeLists.txt  package.xml
replanning_to_goal/include/: replanner_to_goal.h
replanning_to_goal/src/: replanner_to_goal.cpp
(+53 files in other folders)
