<?xml version="1.0"?>
<package format="2">
  <name>replanners_benchmark</name>
  <version>0.0.0</version>
  <description>The replanners_benchmark package</description>

  <maintainer email="c.tonola001@unibs.it">cesare</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  
  <depend>replanners_lib</depend>

  <export>
  </export>
</package>
